[package]
name = "avs-parity"
version = "0.0.0"
edition = "2021"
publish = false

# Mirrors the AVS-side parse path used by `newton-prover-avs/crates/core/src/common/task.rs`:
# `String::from_utf8 → serde_json::from_str`. The encoding test in
# `packages/policy-pack-shared/src/encoding.test.ts` shells out to this binary
# (when `RUN_AVS_PARITY=1`) to assert byte parity between the SDK encoder and
# the actual Rust parser the AVS runs.

[[bin]]
name = "avs-parity"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
